<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/menuAyuda"
        android:icon="@android:drawable/ic_menu_help"
        android:iconTint="@color/white"
        android:title="Ayuda"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menuScanner"
        android:title="Malware Scanner"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menuSMS"
        android:title="Anti SMS Phishing"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuOpciones"
        android:title="Opciones"
        app:showAsAction="never"
        />
</menu>