...
            android:backgroundTint="#F18484"
            android:clickable="true"
            app:maxImageSize="40dp"
            app:srcCompat="@android:drawable/ic_menu_delete" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/nuevoSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#4CAF50"
...
